--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -1,32 +1,110 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Oswald"
+      rel="stylesheet"
+      type="text/css"
+    />
 
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/bootstrap.css" />
 
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
 
-  <link rel="stylesheet" href="css/bootstrap.css">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+      integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+      crossorigin="anonymous"
+    ></script>
 
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script
+      src="https://kit.fontawesome.com/6ac3910c4e.js"
+      crossorigin="anonymous"
+    ></script>
+    <script src="js/bootstrap.js"></script>
 
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+    <title>3D Web Page</title>
+  </head>
 
-<script src="https://kit.fontawesome.com/6ac3910c4e.js" crossorigin="anonymous"></script>
-<script src="js/bootstrap.js"></script>
-
-<title>3D Web Page</title>
-</head>
-
-  <body>
-    <h1>Hello, world!</h1>
-
- 
+  <body style="background-color: black; color: white;">
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+      <div class="logo">
+        <a class="navbar-brand" href="#">
+          <h1>1</h1>
+          <h1>oca</h1>
+          <h2>Cola</h2>
+          <h3>Journey</h3>
+          <p>Refreshing the world, one sip at a time</p>
+        </a>
+      </div>
+      <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target=".navbar-collapse">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link active" hre="#">About</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" hre="#" id="navbardrop" data-bs-toggle="dropdown">Drinks</a>
+            <div class="dropdown-menu bg-dark">
+              <a class="dropdown-item" href="#">Coca Cola</a>
+              <a class="dropdown-item" href="#">Sprite</a>
+              <a class="dropdown-item" href="#">Dr Pepper</a>
+            </div>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="#">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    </nav>
+    <div class="container-fluid">
+      <h1>Hello, world!</h1>
+      <p>Do nulla occaecat minim ex.Labore nisi esse exercitation elit ea. Nulla anim voluptate est laboris laborum duis pariatur irure ex anim minim. Do cillum laborum pariatur eu. Nisi non nulla ex pariatur eu nulla fugiat deserunt sunt consequat aliqua in pariatur nisi. Officia amet cillum nisi cillum magna.</p>
+      <div class="row">
+        <div class="col-sm-4" style="background-color: grey;">
+          Velit aliqua et sunt culpa. Quis reprehenderit incididunt ad quis non ea sunt consectetur ad. Velit velit officia laborum voluptate elit minim laboris anim aliqua tempor dolore in fugiat. Eiusmod et duis deserunt reprehenderit enim deserunt. Quis proident non reprehenderit aliquip excepteur nisi mollit mollit ipsum magna ea sunt nostrud culpa. Nisi aute elit ex enim reprehenderit officia excepteur velit aliqua.
+        </div>
+        <div class="col-sm-4" style="background-color: green;">
+          Velit aliqua et sunt culpa. Quis reprehenderit incididunt ad quis non ea sunt consectetur ad. Velit velit officia laborum voluptate elit minim laboris anim aliqua tempor dolore in fugiat. Eiusmod et duis deserunt reprehenderit enim deserunt. Quis proident non reprehenderit aliquip excepteur nisi mollit mollit ipsum magna ea sunt nostrud culpa. Nisi aute elit ex enim reprehenderit officia excepteur velit aliqua.
+        </div>
+        <div class="col-sm-4" style="background-color: blue;">
+          Velit aliqua et sunt culpa. Quis reprehenderit incididunt ad quis non ea sunt consectetur ad. Velit velit officia laborum voluptate elit minim laboris anim aliqua tempor dolore in fugiat. Eiusmod et duis deserunt reprehenderit enim deserunt. Quis proident non reprehenderit aliquip excepteur nisi mollit mollit ipsum magna ea sunt nostrud culpa. Nisi aute elit ex enim reprehenderit officia excepteur velit aliqua.
+        </div>
+      </div>
+    </div>
   </body>
 </html>
