add footer and images

--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -95,16 +95,75 @@
       <h1>Hello, world!</h1>
       <p>Do nulla occaecat minim ex.Labore nisi esse exercitation elit ea. Nulla anim voluptate est laboris laborum duis pariatur irure ex anim minim. Do cillum laborum pariatur eu. Nisi non nulla ex pariatur eu nulla fugiat deserunt sunt consequat aliqua in pariatur nisi. Officia amet cillum nisi cillum magna.</p>
       <div class="row">
-        <div class="col-sm-4" style="background-color: grey;">
-          Velit aliqua et sunt culpa. Quis reprehenderit incididunt ad quis non ea sunt consectetur ad. Velit velit officia laborum voluptate elit minim laboris anim aliqua tempor dolore in fugiat. Eiusmod et duis deserunt reprehenderit enim deserunt. Quis proident non reprehenderit aliquip excepteur nisi mollit mollit ipsum magna ea sunt nostrud culpa. Nisi aute elit ex enim reprehenderit officia excepteur velit aliqua.
+        <div class="col-sm-4">
+          <div class="card">
+            <a href="#">
+              <img class="card-img-top img-fluid img-thumbnail" src="assets/images/coca_cola.jpg" alt="coca-cola can" />
+            </a>
+            <div class="card-body">
+                <h3 class="card-title">Coca Cola</h3>
+                <p class="card-text">
+                  Coca Cola Great Britain 
+                  Founded in 1886 by pharmacist Dr John S Pemberton in Atlanta, Georgia, The Coca‑Cola Company is the world's leading manufacturer, marketer and distributor of non-alcoholic beverage concentrates and syrups, and produces nearly 400 brands. 
+                </p>
+                <a href="#" class="btn btn-primary">Find Out More...</a>
+            </div>
+          </div>  
         </div>
-        <div class="col-sm-4" style="background-color: green;">
-          Velit aliqua et sunt culpa. Quis reprehenderit incididunt ad quis non ea sunt consectetur ad. Velit velit officia laborum voluptate elit minim laboris anim aliqua tempor dolore in fugiat. Eiusmod et duis deserunt reprehenderit enim deserunt. Quis proident non reprehenderit aliquip excepteur nisi mollit mollit ipsum magna ea sunt nostrud culpa. Nisi aute elit ex enim reprehenderit officia excepteur velit aliqua.
+        <div class="col-sm-4">
+           <div class="card">
+            <a href="#">
+              <img class="card-img-top img-fluid img-thumbnail" src="assets/images/sprite.jpg" alt="sprite can" />
+            </a>
+            <div class="card-body">
+                <h3 class="card-title">Sprite</h3>
+                <p class="card-text">
+                  First introduced in 1961, crisp, refreshing, clean-tasting Sprite is now the world's leading lemon and lime flavoured soft drink and is sold in more than 190 different countries.
+                  Sprite Zero, part of our no sugar Zero range, offers the delicious lemon lime taste of Sprite without the sugar or calories. 
+                </p>
+                <a href="#" class="btn btn-primary">Find Out More...</a>
+            </div>
+          </div>  
         </div>
-        <div class="col-sm-4" style="background-color: blue;">
-          Velit aliqua et sunt culpa. Quis reprehenderit incididunt ad quis non ea sunt consectetur ad. Velit velit officia laborum voluptate elit minim laboris anim aliqua tempor dolore in fugiat. Eiusmod et duis deserunt reprehenderit enim deserunt. Quis proident non reprehenderit aliquip excepteur nisi mollit mollit ipsum magna ea sunt nostrud culpa. Nisi aute elit ex enim reprehenderit officia excepteur velit aliqua.
+        <div class="col-sm-4">
+           <div class="card">
+            <a href="#">
+              <img class="card-img-top img-fluid img-thumbnail" src="assets/images/dr_pepper.jpg" alt="dr pepper can" />
+            </a>
+            <div class="card-body">
+                <h3 class="card-title">Dr Pepper</h3>
+                <p class="card-text">
+                  Dr Pepper's unique, sparkling blend of 23 fruit flavours has been around for well over a century and it's still the same, with that distinctive flavour you just can't quite put your tongue on.
+                  It was created by Texas pharmacist Charles Alderton in 1885. He gave a sample of the first ever batch to Wade Morrison, a local shop owner, and Mr Morrison instantly agreed to stock the drink. The distinctive, bold taste of Dr Pepper has been popular ever since.
+                </p>
+                <a href="#" class="btn btn-primary">Find Out More...</a>
+            </div>
+          </div>  
         </div>
       </div>
     </div>
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+      <div class="container-fluid">
+        <div class="navbar-test float-left copyright">
+          <p>
+            <span class="align-baseline"></span>&copy 2026 3D Web Applications
+          </p>
+        </div>
+        <div class="navbar-test float-right social">
+          <a href="#">
+            <i  class="fab fa-facebook-square fa-2x"></i>
+          </a>
+          <a href="#">
+            <i  class="fab fa-twitter-square fa-2x"></i>
+          </a>
+          <a href="#">
+            <i  class="fab fa-linkedin-square fa-2x"></i>
+          </a>
+          <a href="#">
+            <i  class="fab fa-github-square fa-2x"></i>
+          </a>
+        </div>
+      </div>
+    </nav>
   </body>
 </html>
